fixed whitespace and cleaned some code

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ h4 {
  h5 {
   font-size: 15px;
   text-align: center; 
-  margin: 0px;
+  margin: 12px;
   letter-spacing: 1px; 
  }
 
